[project]
name = "mullerpy"
version = "0.1.0"
description = "A Python implementation of Muller's method."
readme = "README.md"
authors = [{name = "Fabian Gittins", email = "f.w.r.gittins@uu.nl"}]
requires-python = ">=3.8"
dependencies = []
license = {file = "LICENSE.md"}

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "numpy>=1.24.4",
    "pyright>=1.1.401",
    "pytest>=8.3.5",
    "pytest-cov>=5.0.0",
    "ruff>=0.11.11",
]

[tool.hatch.build.targets.wheel]
packages = ["src/muller"]

[tool.pyright]
typeCheckingMode = "strict"

[tool.ruff]
line-length = 79

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "C90",
    "COM812",
    "ICN001",
    "N806",
    "PLR0913",
    "PLR2004",
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "D",
    "INP001",
    "PT",
]
